# Scribblepad

.github/workflows/: main.yml
scribblepad_repo/: README.md  pyproject.toml  setup.cfg  temp_scribblepad.py
scribblepad_repo/examples/: original_scribblepad.py
scribblepad_repo/scribblepad/: __init__.py  gui.py
scribblepad_repo/tests/: test_import.py
