[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scribblepad"
version = "0.1.0"
description = "Tiny Tkinter drawing app"
authors = [ { name="Your Name" } ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["scribblepad*", "examples*", "tests*"]

[project.scripts]
scribblepad-gui = "scribblepad.gui:run_gui"
